[package]
name = "rust-casbin-example"
version = "0.1.0"
authors = ["Mario Zupan <mario@zupzup.org>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ["macros", "rt-threaded", "sync"] }
warp = "0.3.2"
thiserror = "1.0"
serde = {version = "1.0.136", features = ["derive"] }
serde_json = "1.0"
futures = { version = "0.3", default-features = false }
casbin = "2.0.9"
uuid = { version = "0.8", features = ["serde", "v4"] }
